dash/src/index.scss
@import './assets/styles/colors.scss';


html,
body,
#root {
  height: 100%;

  input, label {
    cursor: pointer;
  }

  #sliderTooltip {
    visibility: visible;
    opacity: 0;
    &.visible { opacity: 1; }
    background-color: #e6e6e6;
    color: $dark-grey;
    padding: 5px;

    &::after {
      border-top-color: #e6e6e6;
    }

    // Freeze tooltip on scroll
    z-index: 2; // beneath header
    position: absolute; // not fixed
  }

  .dateTimeStamp {
    font-size: .8em;
    font-weight: normal;
    font-family: 'Gotham Book', serif;
    margin-top: 5px;
  }

  // Slider
  .rc-slider-mark-text {
    color: #666;
  }

  .global.dev {
    margin-top: 60px;
    padding: 0;
  }
  .dev {
    font-family: 'Gotham Book', sans-serif;
    text-align: center;
    font-size: 2em;
    padding: 40px;
    line-height: 1.2;
  }

  $marker-size: 20px;
  // $marker-size: 25px;
  .general-marker {
    opacity: 0;
    height: $marker-size;
    width: $marker-size;
    border-radius: 9999px;
    background-color: $value-red;
    opacity: 1;
    border: 1px solid white;
    transform: translate(-50%, -50%);
    text-align: center;
    vertical-align: middle;
    margin: auto 0;
    position: relative;
    line-height: 300px;

    transition: opacity .5s;

    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.68);
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.68);

  }

  // Mapbox Popup custom styling
  // Define fade-in and out animation used in mapbox popups.
  .fadeIn {
    animation: show .35s normal forwards;
  }
  .fadeOut {
    animation: hide .35s normal forwards;
  }

  /* Standard syntax */
  @keyframes show {
    from {opacity: 0;}
    to {opacity: 1;}
  }
  @keyframes hide {
    from {opacity: 1;}
    to {opacity: 0;}
  }

  // Controls
  .overlays > div:nth-child(2) {
    bottom: unset;
    top: 37px;
  }
  .mapboxgl-ctrl {
    background: none;
    display: flex;
    flex-flow: column;
    outline: none;
    box-shadow: none;
    -webkit-box-shadow: none;

    &:focus {
      outline: none;
    }

    .mapboxgl-ctrl-compass {
      display: none;
    }

    $icon-size: 40px;
    .mapboxgl-ctrl-icon {
      margin: 0;
      background-color: white;
      border-radius: 9999px;
      margin-bottom: 5px;
      height: $icon-size;
      width: $icon-size;
      opacity: 1;

      &:hover {
        background-color: darken(white, 5%);
      }

      &:active {
        background-color: darken(white, 15%);
        box-shadow: none;
        -webkit-box-shadow: none;
      }
    }
  }

  // Position popup in front of legend
  .mapboxgl-popup {
    z-index: 2;
  }

  // Curve corners of content box, set cursor.
  .mapboxgl-popup-content {
    border-radius: $border-radius;
    cursor: default;
  }

  // // Shift position of tooltip vertically
  // .mapboxgl-popup-anchor-top-left {
  //   transform: translate(0, 10px) !important;
  // }
  // .mapboxgl-popup-anchor-top-right {
  //   transform: translate(-100%, 10px) !important;
  // }
  // .mapboxgl-popup-anchor-left {
  //   transform: translate(10px, -20px) !important;
  // }
  // .mapboxgl-popup-anchor-right {
  //   transform: translate(calc(-100% - 10px), -20px) !important;
  // }

  // Position tip higher so it is always in the gray header area.
  // Color tip gray
  // .mapboxgl-popup-tip {
  //   position: absolute;
  // }
  // .mapboxgl-popup-anchor-left,
  // .mapboxgl-popup-anchor-right {
  //   .mapboxgl-popup-tip {
  //     top: 10px;
  //   }
  // }

  // Ensure upper left and right border radius of tooltip header doesn't put a
  // gap between the tip and the header
  .mapboxgl-popup-anchor-top-left .mapboxgl-popup-content > div > div {
    border-radius: 0 $border-radius 0 0;
  }
  .mapboxgl-popup-anchor-top-right .mapboxgl-popup-content > div > div {
    border-radius: $border-radius 0 0 0;
  }
  .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-content {
    border-radius: $border-radius $border-radius $border-radius 0;
  }
  .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-content {
    border-radius: $border-radius $border-radius 0 $border-radius;
  }

  .mapboxgl-popup-anchor-top-left,
  .mapboxgl-popup-anchor-top-right,
  .mapboxgl-popup-anchor-top {
    .mapboxgl-popup-tip {
      // top: -7px;
      border-bottom-color: $light-grey-2;
    }
  }
  .mapboxgl-popup-anchor-bottom-left,
  .mapboxgl-popup-anchor-bottom-right,
  .mapboxgl-popup-anchor-bottom {
    .mapboxgl-popup-tip {
      // bottom: -7px;
      border-bottom-color: $light-grey-2;
    }
  }
  .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
    // border-right-color: $light-grey-2;
    // left: -10px;
  }
  .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
    // border-left-color: $light-grey-2;
    // right: -10px;
  }
}


// Data not available text
.notAvail {
  color: $grey;
  font-style: italic;
  font-family: 'Gotham Book', serif;
  font-size: 1em;
  margin-top: 5px;
}

// Data source text
.dataSource {
  color: hsla(0, 0%, 60%, 1);
  font-size: .75em;
  font-style: italic;
  margin-top: 5px;
  clear: right;
  max-width: 650px;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

// Styling for gear icon in header
header i.material-icons {
  align-self: center;
  cursor: pointer;
  color: rgba(0, 0, 0, .85); // to match nav menu items
}

.react-datepicker__time-list-item {
  white-space: nowrap;
}
#mapbox-container-small {
  // max-height: 600px;
}

[contenteditable=true]:empty:before, ::placeholder {
  content: attr(placeholder);
  display: block; /* For Firefox */
  color: lightgray;
  font-style: italic;
}

input:empty:before {
  content: attr(placeholder);
  display: block; /* For Firefox */
  color: lightgray;
  font-style: italic;
}

.react-datepicker__input-container {
  width: 300px;
}

.popup-content.settingsMenu-content {
  width: 210px !important;
}

// Styling for reactjs-popup tooltips
.mapModal-content {
  width: 33% !important;
}
.infoTooltip {
  font-weight: normal;
  font-size: 16px;
}
.signupLink .popup-content {
  width: 500px !important;
}
.popup-content {
  // border-radius: 5px !important;
  font-family: 'Open Sans', sans-serif !important;
  padding: 10px !important;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  z-index: 10 !important;
}

$iconSize: 20px;
.facility-marker {
  border-radius: 1000px;
  width: $iconSize;
  height: $iconSize;
  border: white 2px solid;
  box-shadow: 0 0 20px 0px;

  &.critical {
    background-color: $critical;
  }
  &.alerted {
    background-color: $alerted;
  }
  &.stable {
    background-color: $stable;
  }
}

//tables
table {
  width: 100%;
  padding-top: 10px;
  & > tr > th {
    text-align: left;
  }

  &.statusUpdates,
  &.alertHistory {
    padding: 20px;
    // border-bottom: 2px solid $grey;
    td::first-letter {
      text-transform: uppercase;
    }
    tr:not(:first-child) {
      td {
        border-top: 1px solid #e6e6e6;
      }
    }
    th {
      border-bottom: 1px solid #e6e6e6;
    }
  }
}

.button, button {
  cursor: pointer;
}

.btn-secondary {
  background-color: transparent;
  border: 1px solid black;
  color: $dark-grey;
  &:hover {
    background-color: darken(white, 15%);
    color: black;
  }
  &:active {
    background-color: darken(white, 25%);
  }
}

.btn-sm {
  padding: 2.5px 5px;
  font-weight: normal;
  &:active {
    -webkit-box-shadow: 0 0 5px .5px rgba(0, 0, 0, 0.3);
    box-shadow: 0 0 5px .5px rgba(0, 0, 0, 0.3);
  }
}

.button.back {
  visibility: hidden;
}

$button-shadow: rgba(0, 0, 0, 0.2);
.button.modal {
  font-family: 'rawline', serif;
  font-size: 1.5em;
  font-weight: 600;
  padding: 10px 20px;
  color: black;
  border: 1px solid white;
  margin: 0;
  -webkit-box-shadow: 0 0 5px 0.5px $button-shadow;
  box-shadow: 0 0 5px 0.5px $button-shadow;
  background: $light-blue-gradient-1;
  line-height: 1;

  &:hover {
    background: $light-blue-gradient-2;
    -webkit-box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.3);
    box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.3);
  }
  &:active {
    background: $light-blue-gradient-3;
    -webkit-box-shadow: 0 0 5px 1.5px rgba(0, 0, 0, 0.3);
    box-shadow: 0 0 5px 1.5px rgba(0, 0, 0, 0.3);
  }
}

// Add styling from Bootstrap 3, "Dropdown" JS component package:
// Source: https://getbootstrap.com/docs/3.4/customize/
.pagination {
  display: inline-block;
  padding-left: 0;
  margin: 20px 0;
  border-radius: 4px;
}
.pagination > li {
  display: inline;
}
.pagination > li > a,
.pagination > li > span {
  position: relative;
  float: left;
  padding: 6px 12px;
  margin-left: -1px;
  line-height: 1.42857143;
  color: #337ab7;
  text-decoration: none;
  background-color: #ffffff;
  border: 1px solid #dddddd;
}
.pagination > li > a:hover,
.pagination > li > span:hover,
.pagination > li > a:focus,
.pagination > li > span:focus {
  z-index: 2;
  color: #23527c;
  background-color: #eeeeee;
  border-color: #dddddd;
}
.pagination > li:first-child > a,
.pagination > li:first-child > span {
  margin-left: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.pagination > li:last-child > a,
.pagination > li:last-child > span {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}
.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  z-index: 3;
  color: #ffffff;
  cursor: default;
  background-color: #337ab7;
  border-color: #337ab7;
}
.pagination > .disabled > span,
.pagination > .disabled > span:hover,
.pagination > .disabled > span:focus,
.pagination > .disabled > a,
.pagination > .disabled > a:hover,
.pagination > .disabled > a:focus {
  color: #777777;
  cursor: not-allowed;
  background-color: #ffffff;
  border-color: #dddddd;
}
.pagination-lg > li > a,
.pagination-lg > li > span {
  padding: 10px 16px;
  font-size: 18px;
  line-height: 1.3333333;
}
.pagination-lg > li:first-child > a,
.pagination-lg > li:first-child > span {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
}
.pagination-lg > li:last-child > a,
.pagination-lg > li:last-child > span {
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}
.pagination-sm > li > a,
.pagination-sm > li > span {
  padding: 5px 10px;
  font-size: 12px;
  line-height: 1.5;
}
.pagination-sm > li:first-child > a,
.pagination-sm > li:first-child > span {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}
.pagination-sm > li:last-child > a,
.pagination-sm > li:last-child > span {
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}
.caret {
  display: inline-block;
  width: 0;
  height: 0;
  margin-left: 2px;
  vertical-align: middle;
  border-top: 4px dashed;
  border-top: 4px solid \9;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
}

.dropup .caret,
.navbar-fixed-bottom .dropdown .caret {
  content: "";
  border-top: 0;
  border-bottom: 4px dashed;
  border-bottom: 4px solid \9;
}

.select-search-box::after,
.react-datepicker__input-container::after {
  content: "expand_more" !important;
  font-family: 'Material Icons' !important;
}

// Slider on details page.
rect.overlay {
  // fill: rgba(255, 255, 255, 0.47843137254901963);
}
g.brush {
  rect.selection {
    fill: none;
    stroke: $dark-grey;
  }
  path.handle--custom {
    stroke: $dark-grey;
    fill: #e6e6e6;
  }
  // rect.handle {
  //   fill: #b3b3b3;
  //   stroke: $dark-grey;
  // }
}

@import "../node_modules/react-bootstrap-table-next/dist/react-bootstrap-table2.min.css";
@import './assets/styles/fonts.css';
@import './assets/styles/global.scss';
@import './assets/styles/react-select-search.scss';

